# fast_tffm

./: .gitignore  CMakeLists.txt  README.md  fast_tffm.py  fm_model.py  peteris.yaml  run_tffm.py  sample.cfg  setup.py  tox.ini  train.py
cc/: fm_grad_op.cc  fm_grad_op.cu  fm_grad_op.h  fm_parser_op.cc  fm_scorer_op.cc  fm_scorer_op.cu  fm_scorer_op.h
py/: fm_model.py  fm_ops.py  fm_train.py
scripts/: train.py
test/: fm_parser_op_test.py  fm_scorer_op_test.py
tffm/: fm_model.py  fm_ops.py
